gke/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${ARGOCD_APP_NAMESPACE}app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${ARGOCD_APP_NAMESPACE}app
  template:
    metadata:
      labels:
        app: ${ARGOCD_APP_NAMESPACE}app
    spec:
      imagePullSecrets:  # Add this section for image pull secrets
      - name: regcred
      containers:
      - name: ${ARGOCD_APP_NAMESPACE}app
        image: mariocalipo.jfrog.io/mariocalipo-docker-local/image-${ARGOCD_APP_NAMESPACE}:latest
        ports:
          - containerPort: 8080
        livenessProbe:      # Used by deployment controller
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:     # Used by Ingress/GCLB
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 256Mi
