gke/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${ARGOCD_APP_NAMESPACE}app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ${ARGOCD_APP_NAMESPACE}app
  type: NodePort
