gke/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ARGOCD_APP_NAMESPACE}app
spec:
  defaultBackend:
    service:
      name: ${ARGOCD_APP_NAMESPACE}app
      port:
        number: 80
